
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2024 JUN 03b
  * in model/chem/_Air_Plasma_11s/rodriguez2024.c
    - fixed a bug with one spline reaction
  * in model/chem/_Air_Plasma_11s/
    - added rodriguezpark2024.c
  * in model/chem/_Air_Plasma_11s/chem.c
    - added the model rodriguezpark2024
  * in model/chem/_Air_Plasma_8s/rodriguez2024.c
    - fixed a bug with one spline reaction
  * in model/chem/_Air_Plasma_11s/doc/report.tex
    - updated the document 
  * in model/chem/_Air_Plasma_8s/doc/report.tex
    - updated the document
    

2024 JUN 03a
  * in model/chem/_NH3_Plasma_32s/arakoni2007omprakas.c
    - fixed a mistake in reactions 8 and 14 (rates were off by several orders of magnitude)


2024 JUN 01a
  * in model/transport/_Gupta-Yos/transport.c
    - added TRANSPORTMODEL_NONEQUILIBRIUMCORRECTED_IONMOBILITIESPARENTMACHERET
    - in find_nuk_eta_kappak_muk(), added code for TRANSPORTMODEL_NONEQUILIBRIUMCORRECTED_IONMOBILITIESPARENTMACHERET
    - in _mueNk_from_Te(), added neutral species check also for 
      TRANSPORTMODEL_NONEQUILIBRIUMCORRECTED_MOBILITIESPARENTMACHERET


2024 MAY 28b
  * in model/fluid/_Favre-Reynolds/fluid_bdry.c
    - fixed a bug in update_bdry_wall_ablation()
    - got rid of wwall=0 for charged species in update_bdry_wall_ablation()
    

2024 MAY 28a
  * in lib/exm/exm.c
    - in powint(), added assert(y>=0);
  * in model/chem/_Cs_Air_Plasma_15s/chem.hh
    - added the species ``C''
  * in model/fluid/_Favre-Reynolds/fluid_bdry.c
    - made modifications to update_bdry_wall_ablation()
    - made modifications to _heat_to_surface()
    

2024 MAY 24a
  * in model/fluid/_Favre-Reynolds/fluid_bdry.c
    - added find_bdry_node_surface() and _heat_to_surface()
    

2024 MAY 23a